fix(SidebarVersions): spacing

--- a/src/scripts/modules/components/react/components/SidebarJobs.less
+++ b/src/scripts/modules/components/react/components/SidebarJobs.less
@@ -2,7 +2,7 @@
   width: 31px;
 }
 
-.kbc-sidebar-jobs {
-  margin-bottom: 35px;
+.kbc-main-sidebar div.kbc-sidebar-jobs {
+  margin-bottom: 25px;
 }
 
