--- a/src/scripts/modules/components/react/components/SidebarVersions.less
+++ b/src/scripts/modules/components/react/components/SidebarVersions.less
@@ -1,6 +1,6 @@
 
 .kbc-sidebar-versions {
-    margin-top: 35px;
+    margin-top: 15px;
     border-top: 1px solid #dddddd;
     margin-bottom: 20px;
 }
